--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,6 +8,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Set Timezone to +0 (No input)
         uses: ./
       - name: Set Timezone to +0 (With input)
