--- a/action.yml
+++ b/action.yml
@@ -5,16 +5,16 @@ branding:
   icon: "clock"
   color: "yellow"
 inputs:
-  timezoneWindows:
-    description: "Desired timezone for Windows"
-    required: false
-    default: "UTC"
   timezoneLinux:
     description: "Desired timezone for Linux"
     required: false
     default: "UTC"
   timezoneMacos:
     description: "Desired timezone for MacOS"
+    required: false
+    default: "GMT"
+  timezoneWindows:
+    description: "Desired timezone for Windows"
     required: false
     default: "UTC"
 runs:
