--- a/.github/workflows/test_run_different_inputs.yml
+++ b/.github/workflows/test_run_different_inputs.yml
@@ -1,4 +1,4 @@
-on: push
+on: [push, pull_request]
 
 jobs:
   test_action:
@@ -6,7 +6,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
