build: add npm i before tests

--- a/.github/workflows/test_windows_gmt8.yml
+++ b/.github/workflows/test_windows_gmt8.yml
@@ -11,4 +11,5 @@ jobs:
         uses: ./
         with:
           timezoneWindows: "Singapore Standard Time"
+      - run: npm i
       - run: npm run test
