--- a/.github/workflows/test_linux_gmt8.yml
+++ b/.github/workflows/test_linux_gmt8.yml
@@ -2,7 +2,7 @@ on: [push, pull_request]
 
 jobs:
   test_linux_gmt8:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     name: Test GMT +8
     steps:
       - name: Checkout
