--- a/.github/workflows/test_run_action.yml
+++ b/.github/workflows/test_run_action.yml
@@ -1,8 +1,18 @@
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+  page_build:
+  release:
+    types:
+      - created
 
 jobs:
   test_action:
-    name: Test Action
+    name: Test Run Action
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
