--- a/.github/workflows/test_windows_gmt8.yml
+++ b/.github/workflows/test_windows_gmt8.yml
@@ -1,9 +1,19 @@
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+  page_build:
+  release:
+    types:
+      - created
 
 jobs:
   test_windows_gmt8:
     runs-on: windows-latest
-    name: Test GMT +8
+    name: Test GMT +8 on Windows
     steps:
       - name: Checkout
         uses: actions/checkout@v2
