--- a/.github/workflows/test_run_action.yml
+++ b/.github/workflows/test_run_action.yml
@@ -1,12 +1,22 @@
-on: push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+  page_build:
+  release:
+    types:
+      - created
 
 jobs:
   test_action:
-    name: Test Action
+    name: Test Run Action
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
