ci: update checkout action & give the workflows names

--- a/.github/workflows/test_linux_gmt8.yml
+++ b/.github/workflows/test_linux_gmt8.yml
@@ -1,3 +1,5 @@
+name: Test Linux
+
 on:
   push:
     branches:
@@ -19,7 +21,7 @@ jobs:
     name: Test GMT +8 on Ubuntu
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set Timezone to +8 (With input)
         uses: ./
         with:
