--- a/.github/workflows/test_run_action.yml
+++ b/.github/workflows/test_run_action.yml
@@ -1,3 +1,5 @@
+name: Test all Platforms
+
 on:
   push:
     branches:
@@ -19,7 +21,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set Timezone to +0 (No input)
         uses: ./
       - name: Set Timezone to +0 (With input)
