--- a/.github/workflows/test_windows_gmt8.yml
+++ b/.github/workflows/test_windows_gmt8.yml
@@ -1,3 +1,4 @@
+name: Test Windows
 on:
   push:
     branches:
@@ -9,17 +10,16 @@ on:
   release:
     types:
       - created
-
 jobs:
   test_windows_gmt8:
     runs-on: windows-latest
     name: Test GMT +8 on Windows
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set Timezone to +8 (With input)
         uses: ./
         with:
-          timezoneWindows: "Singapore Standard Time"
-      - run: npm i
-      - run: npm run test
+          timezoneWindows: 'Singapore Standard Time'
+      - run: yarn install
+      - run: yarn test
