--- a/.github/workflows/test_macos_gmt8.yml
+++ b/.github/workflows/test_macos_gmt8.yml
@@ -1,3 +1,4 @@
+name: Test macOS
 on:
   push:
     branches:
@@ -9,17 +10,16 @@ on:
   release:
     types:
       - created
-
 jobs:
   test_macos_gmt8:
     runs-on: macos-latest
     name: Test GMT +8 on MacOS
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set Timezone to +8 (With input)
         uses: ./
         with:
-          timezoneMacos: "Asia/Singapore"
-      - run: npm i
-      - run: npm run test
+          timezoneMacos: 'Asia/Singapore'
+      - run: yarn install
+      - run: yarn test
