--- a/.github/workflows/test_run_action.yml
+++ b/.github/workflows/test_run_action.yml
@@ -1,3 +1,4 @@
+name: Test all Platforms
 on:
   push:
     branches:
@@ -9,7 +10,6 @@ on:
   release:
     types:
       - created
-
 jobs:
   test_action:
     name: Test Run Action
@@ -19,18 +19,18 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set Timezone to +0 (No input)
         uses: ./
       - name: Set Timezone to +0 (With input)
         uses: ./
         with:
-          timezoneLinux: "UTC"
-          timezoneMacos: "GMT"
-          timezoneWindows: "UTC"
+          timezoneLinux: 'UTC'
+          timezoneMacos: 'GMT'
+          timezoneWindows: 'UTC'
       - name: Set Timezone to +8 (With input)
         uses: ./
         with:
-          timezoneLinux: "Asia/Singapore"
-          timezoneMacos: "Asia/Singapore"
-          timezoneWindows: "Singapore Standard Time"
+          timezoneLinux: 'Asia/Singapore'
+          timezoneMacos: 'Asia/Singapore'
+          timezoneWindows: 'Singapore Standard Time'
