--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
   "name": "set-timezone",
-  "version": "1.2",
+  "version": "1.0",
   "description": "Set timezone",
   "main": "index.js",
+  "packageManager": "yarn@4.1.0",
+  "engines": {
+    "node": "20.11.1"
+  },
+  "type": "module",
   "scripts": {
-    "run": "node index.js",
     "build": "ncc build index.js",
+    "prettier": "prettier --check ./",
+    "prettier:write": "prettier --write ./",
+    "run": "node index.js",
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/szenius/set-timezone.git"
+    "url": "git+https://github.com/MathRobin/set-timezone.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/szenius/set-timezone/issues"
+    "url": "https://github.com/MathRobin/set-timezone/issues"
   },
-  "homepage": "https://github.com/szenius/set-timezone#readme",
+  "homepage": "https://github.com/MathRobin/set-timezone#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5",
-    "execa": "^4.0.3"
+    "@actions/core": "1.10.1",
+    "execa": "8.0.1"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
-    "jest": "^27.0.6"
+    "@vercel/ncc": "0.38.1",
+    "jest": "29.7.0",
+    "prettier": "3.2.5"
   }
 }
