--- a/.github/workflows/test_run_action.yml
+++ b/.github/workflows/test_run_action.yml
@@ -2,10 +2,10 @@ name: Test all Platforms
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
   page_build:
   release:
     types:
