--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "setup-timezone",
-  "version": "1.0",
+  "name": "timezone-action",
+  "version": "1.1",
   "description": "Set timezone",
   "main": "index.js",
   "packageManager": "yarn@4.1.0",
@@ -17,14 +17,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MathRobin/setup-timezone.git"
+    "url": "git+https://github.com/MathRobin/timezone-action.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MathRobin/setup-timezone/issues"
+    "url": "https://github.com/MathRobin/timezone-action/issues"
   },
-  "homepage": "https://github.com/MathRobin/setup-timezone#readme",
+  "homepage": "https://github.com/MathRobin/timezone-action#readme",
   "dependencies": {
     "@actions/core": "1.10.1",
     "execa": "8.0.1"
