--- a/.github/workflows/test_linux_gmt8.yml
+++ b/.github/workflows/test_linux_gmt8.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - run: yarn config set -H enableImmutableInstalls false
       - name: Set Timezone to +8 (With input)
         uses: ./
         with:
