--- a/.github/workflows/test_run_action.yml
+++ b/.github/workflows/test_run_action.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - run: yarn config set -H enableImmutableInstalls false
       - name: Set Timezone to +0 (No input)
         uses: ./
       - name: Set Timezone to +0 (With input)
